board: beacon: imx8mn:  Change the name imx8mn beacon board
The files were copied from the imx8mn_evk, but in reality we're
calling in imx8mn_beacon.c to be consistent with the Mini board
naming convention

Signed-off-by: Adam Ford <aford173@gmail.com>

--- a/board/beacon/imx8mn/Makefile
+++ b/board/beacon/imx8mn/Makefile
@@ -1,10 +1,10 @@
 #
-# Copyright 2018 NXP
+# Copyright 2020 Compass Electronics Group, LLC
 #
 # SPDX-License-Identifier:      GPL-2.0+
 #
 
-obj-y += imx8mn_evk.o
+obj-y += imx8mn_beacon.o
 obj-y += ../../freescale/common/
 ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
